--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mail-merger",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Tool of mail merge, which takes {{mustache}} email templates and data from json or csv to generate and bulk send emails",
   "main": "./dist/index.js",
   "scripts": {
@@ -24,6 +24,14 @@
     "generate email",
     "email template"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/leodinas-hao/mail-merger.git"
+  },
+  "bugs": {
+    "url": "https://github.com/leodinas-hao/mail-merger/issues"
+  },
+  "homepage": "https://github.com/leodinas-hao/mail-merger#README.md",
   "dependencies": {
     "csvtojson": "^2.0.8",
     "dotenv": "^6.1.0",
