--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "mail-merger",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Tool of mail merge, which takes {{mustache}} email templates and data from json or csv to generate and bulk send emails",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf dist",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "compile:ts": "tsc",
     "compile": "npm run clean && npm run lint && npm run compile:ts",
     "prepack": "npm run compile",
-    "postinstall": "npm run compile",
+    "prepublishOnly": "npm run compile",
     "pretest": "npm run compile",
     "test": "mocha --colors --no-timeouts ./dist/**/*.spec.js",
     "test:debug": "mocha --inspect=5858 --colors --no-timeouts --require ts-node/register ./src/**/*.spec.ts"
