--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,11 @@
     ],
     "sourceMap": true,
     "outDir": "dist",
-    "allowJs": true,
     "noImplicitAny": false,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "declaration": true
   },
   "include": [
     "src/**/*.ts"
