--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mail-merger",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Tool of mail merge, which takes {{mustache}} email templates and data from json or csv to generate and bulk send emails",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/leodinas-hao/mail-merger#README.md",
   "dependencies": {
+    "cli-table": "^0.3.1",
     "csvtojson": "^2.0.8",
     "dotenv": "^6.1.0",
     "handlebars": "^4.0.12",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.6",
+    "@types/cli-table": "^0.3.0",
     "@types/handlebars": "^4.0.39",
     "@types/lodash": "^4.14.117",
     "@types/nodemailer": "^4.6.5",
