--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mail-merger",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Tool of mail merge, which takes {{mustache}} email templates and data from json or csv to generate and bulk send emails",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -11,9 +11,7 @@
     "compile": "npm run clean && npm run lint && npm run compile:ts",
     "prepack": "npm run compile",
     "prepublishOnly": "npm run compile",
-    "pretest": "npm run compile",
-    "test": "mocha --colors --no-timeouts ./dist/**/*.spec.js",
-    "test:debug": "mocha --inspect=5858 --colors --no-timeouts --require ts-node/register ./src/**/*.spec.ts"
+    "test": "mocha --opts ./mocha.opts"
   },
   "author": "Leo Hao <leodinas.hao@gmail.com>",
   "license": "MIT",
@@ -35,26 +33,28 @@
   "homepage": "https://github.com/leodinas-hao/mail-merger#README.md",
   "dependencies": {
     "cli-table": "^0.3.1",
-    "csvtojson": "^2.0.8",
-    "dotenv": "^6.1.0",
-    "handlebars": "^4.1.2",
-    "lodash": "^4.17.14",
-    "nodemailer": "^4.6.8",
-    "yargs": "^12.0.2"
+    "csvtojson": "^2.0.10",
+    "dotenv": "^8.1.0",
+    "handlebars": "^4.4.0",
+    "lodash": "^4.17.15",
+    "nodemailer": "^6.3.0",
+    "yargs": "^14.0.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.6",
+    "@testdeck/mocha": "0.0.6",
+    "@types/chai": "^4.2.3",
     "@types/cli-table": "^0.3.0",
-    "@types/handlebars": "^4.0.39",
-    "@types/lodash": "^4.14.117",
-    "@types/nodemailer": "^4.6.5",
-    "@types/yargs": "^12.0.1",
+    "@types/handlebars": "^4.1.0",
+    "@types/lodash": "^4.14.141",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.7.8",
+    "@types/nodemailer": "^6.2.1",
+    "@types/yargs": "^13.0.3",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "mocha-typescript": "^1.1.17",
-    "rimraf": "^2.6.2",
-    "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.3"
+    "mocha": "^6.2.1",
+    "rimraf": "^3.0.0",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.3"
   }
 }
