--- a/.mocha.yml
+++ b/.mocha.yml
@@ -2,5 +2,6 @@
 ui: bdd
 timeout: 0
 colors: true
-require: 'ts-node/register/transpile-only'
+require: 
+  - 'ts-node/register/transpile-only'
 spec: src/**/*.spec.ts
