--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,10 +12,12 @@
       "cwd": "${workspaceFolder}",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
       "args": [
-        "--opts",
-        "mocha.opts"
+        "--config",
+        ".mocha.yml",
+        "--grep",
+        "/^${fileBasenameNoExtension}/"
       ],
-      "internalConsoleOptions": "openOnSessionStart"
+      "console": "integratedTerminal"
     }
   ]
 }
