--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mail-merger",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "Tool of mail merge, which takes {{mustache}} email templates and data from json or csv to generate and bulk send emails",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -32,29 +32,29 @@
   },
   "homepage": "https://github.com/leodinas-hao/mail-merger#README.md",
   "dependencies": {
-    "cli-table": "^0.3.1",
+    "cli-table": "^0.3.6",
     "csvtojson": "^2.0.10",
-    "dotenv": "^8.2.0",
-    "handlebars": "^4.7.6",
-    "lodash": "^4.17.19",
-    "nodemailer": "^6.4.10",
-    "yargs": "^15.4.1"
+    "dotenv": "^10.0.0",
+    "handlebars": "^4.7.7",
+    "lodash": "^4.17.21",
+    "nodemailer": "^6.6.3",
+    "yargs": "^17.1.0"
   },
   "devDependencies": {
-    "@testdeck/mocha": "0.1.0",
-    "@types/chai": "^4.2.11",
+    "@testdeck/mocha": "^0.1.2",
+    "@types/chai": "^4.2.21",
     "@types/cli-table": "^0.3.0",
     "@types/handlebars": "^4.1.0",
-    "@types/lodash": "^4.14.157",
-    "@types/mocha": "^8.0.0",
-    "@types/node": "^14.0.23",
-    "@types/nodemailer": "^6.4.0",
-    "@types/yargs": "^15.0.5",
-    "chai": "^4.2.0",
-    "mocha": "^8.0.1",
+    "@types/lodash": "^4.14.172",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.4.13",
+    "@types/nodemailer": "^6.4.4",
+    "@types/yargs": "^17.0.2",
+    "chai": "^4.3.4",
+    "mocha": "^9.0.3",
     "rimraf": "^3.0.2",
-    "ts-node": "^8.10.2",
-    "tslint": "^6.1.2",
-    "typescript": "^3.9.7"
+    "ts-node": "^10.2.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.5"
   }
 }
